[F] Fix mobile view height causing button to be invisible when browser url bar is not hidden

--- a/src/style/app.sass
+++ b/src/style/app.sass
@@ -10,6 +10,9 @@ body
     margin: 0
     background: rgb(var(--m3-scheme-background))
 
+#layout-view
+    height: var(--svh)
+
 .hbox
     display: flex
     flex-direction: row
